# smartChunker

./: .gitignore  README.md  pyproject.toml
docs/: audit_report.md  benchmark_design.md  dev_log.md  walkthrough.md
smartchunker/: __init__.py  metadata.py  normalizer.py  tokenizers.py
smartchunker/adapters/: __init__.py  langchain.py  llamaindex.py
smartchunker/chunkers/: __init__.py  base.py  fixed_element.py  heading_aware.py
smartchunker/elements/: __init__.py  base.py  document.py  types.py
smartchunker/evaluation/: benchmark.py
smartchunker/parsers/: __init__.py  base.py  html.py  markdown.py
tests/: test_adapters.py  test_chunkers.py  test_coverage_gaps.py  test_elements.py  test_parsers.py  test_tokenizers.py
