[tool.poetry]
name = "smartchunker"
version = "0.1.0"
description = "The BeautifulSoup of document chunking. Structure-aware, zero-dependency splitting for RAG."
authors = ["Rishi <rishi@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "smartchunker"}]

[tool.poetry.dependencies]
python = "^3.9"
markdown-it-py = "^3.0.0"
beautifulsoup4 = "^4.12.0"
tiktoken = { version = "^0.7.0", optional = true }
transformers = { version = "^4.40.0", optional = true }

[tool.poetry.extras]
tiktoken = ["tiktoken"]
huggingface = ["transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
